--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 "name": "ianalejandrook15x"
 },
 "collaborators": {
-"col1": "ianalejandrook14x",
+"col1": "ianalejandrook14x"
 },
 "repository": {
 "type": "git",
